# GvCameraSDK-Public-Dist

./: .gitignore  CMakeLists.txt  README.md  manifest.txt  package_dist.ps1
dist_out/: CMakeLists.txt
dist_out/docs/: GvCameraSDK-Release-Notes.md
dist_out/licenses/: NOTICE.txt
dist_out/samples/: gvsdk_list_devices_sample.cpp
docs/: GVCAMERA_SDK_FIRMWARE_COMPATIBILITY.md
include/GvCameraSDK/: GvCameraAPI.h
lib/: GvCameraSDK.lib  GvCameraSDKd.lib
samples/: CMakeLists.txt  gvsdk_capture2d_sample.cpp  gvsdk_capture3d_sample.cpp  gvsdk_fix_ip_sample.cpp  gvsdk_open_device_sample.cpp  gvsdk_version_sample.cpp
